--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"eslint": "^8.28.0",
 		"eslint-plugin-svelte": "^2.26.0",
 		"postcss": "^8.4.23",
+		"prisma": "^4.14.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.3.2",
