--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
 		"@skeletonlabs/skeleton": "^1.5.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@tailwindcss/forms": "^0.5.3",
+		"@types/pg": "^8.6.6",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
+		"dotenv": "^16.0.3",
+		"dotenv-expand": "^10.0.0",
+		"drizzle-kit": "^0.17.6",
 		"eslint": "^8.28.0",
 		"eslint-plugin-svelte": "^2.26.0",
 		"postcss": "^8.4.23",
-		"prisma": "^4.14.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.3.2",
@@ -31,7 +35,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@vercel/postgres": "^0.3.0",
+		"drizzle-orm": "^0.25.4",
 		"iconify-icon": "^1.0.7",
+		"pg": "^8.11.0",
 		"svelte-dnd-action": "^0.9.22"
 	}
 }
