--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint ."
+		"lint": "eslint .",
+		"generate": "drizzle-kit generate:pg --config=drizzle.config.ts"
 	},
 	"devDependencies": {
 		"@floating-ui/dom": "^1.2.8",
@@ -22,7 +23,7 @@
 		"autoprefixer": "^10.4.14",
 		"dotenv": "^16.0.3",
 		"dotenv-expand": "^10.0.0",
-		"drizzle-kit": "^0.17.6",
+		"drizzle-kit": "^0.18.0",
 		"eslint": "^8.28.0",
 		"eslint-plugin-svelte": "^2.26.0",
 		"postcss": "^8.4.23",
@@ -36,9 +37,12 @@
 	"type": "module",
 	"dependencies": {
 		"@vercel/postgres": "^0.3.0",
-		"drizzle-orm": "^0.25.4",
+		"drizzle-orm": "^0.26.0",
+		"drizzle-zod": "^0.4.1",
 		"iconify-icon": "^1.0.7",
 		"pg": "^8.11.0",
-		"svelte-dnd-action": "^0.9.22"
+		"svelte-dnd-action": "^0.9.22",
+		"sveltekit-superforms": "^0.8.7",
+		"zod": "^3.21.4"
 	}
 }
